# naidb

./: .gitignore  README.md  pyproject.toml
naidb/: interpreter.py  lexer.py  parser.py
tests/: test_naidb.py
